--- a/styles/default.css
+++ b/styles/default.css
@@ -2,58 +2,49 @@
   font-family: number;
   src: url(../fonts/advanced-dot-digital-7/advanced_dot_digital-7.ttf);
 }
-
 @font-face {
   font-family: defaultFont;
-  src: url(../fonts/typewolf_google_fonts/worksans/WorkSans-Regular.ttf);
+  src: url(../fonts/worksans/WorkSans-Regular.ttf);
 }
-
 @font-face {
   font-family: artFont;
   src: url(../fonts/eagle-lake/EagleLake-Regular.ttf);
 }
-
 body {
   font-family: defaultFont;
 }
-
 body.simple-page {
   font-family: artFont;
-  background: url(/images/bg.jpg) no-repeat center 0;
+  background-image: url(/images/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #000000;
   text-align: center;
   color: #dedede;
   margin-top: 80px;
 }
-
 body.simple-page h1 {
   font-size: 180px;
   margin: 200px 0 40px 0;
   font-family: number;
 }
-
 body.simple-page h2 {
   font-size: 36px;
   margin-bottom: 40px;
 }
-
 body.simple-page h3 {
   font-size: 24px;
 }
-
 body.simple-page a {
   text-decoration: none;
   color: #dedede;
 }
-
 body.simple-page a:hover {
   color: #dddddd;
 }
-
 body.simple-page .nav {
   margin: 30px 15px;
 }
-
 body.simple-page .copyright {
   font-size: 13px;
-}
-/*# sourceMappingURL=default.css.map */
+}/*# sourceMappingURL=default.css.map */
